@@ -25,12 +25,10 @@ public class ItemLikeService {
 
     private final ItemLikeRepository itemLikeRepository;
     private final ItemRepository itemRepository;
-    private final MemberRepository memberRepository;
 
     // 생성
     @Transactional
-    public Long likeItem(String email, Long itemId){
-        Member member = memberRepository.findByEmail(email).orElseThrow(() -> new IllegalStateException(Constants.MEMBER_NOT_FOUND));
+    public Long likeItem(Member member, Long itemId){
         Item item = itemRepository.findById(itemId).orElseThrow(() -> new IllegalStateException(ItemConstant.ITEM_NOT_FOUND));
         ItemLike itemLike = ItemLike.createItemLike(member, item);
         itemLikeRepository.save(itemLike);
@@ -46,7 +44,6 @@ public class ItemLikeService {
     // 회원별 좋아하는 아이템 가져오기
     public List<ItemLikeDto> getLikeItem(String email){
         List<Item> itemLike = itemLikeRepository.findItemLike(email);
-        List<ItemLikeDto> itemList = itemLike.stream().map(ItemLikeDto::of).collect(Collectors.toList());
-        return itemList;
+        return itemLike.stream().map(ItemLikeDto::of).toList();
     }
 }
